<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_vrt_calc"
            android:icon="@drawable/ic_nav_calc"
            android:title="@string/vrt_calculator" />

        <item
            android:id="@+id/nav_add_registration"
            android:icon="@drawable/ic_action_car_add"
            android:title="@string/add_registration" />
    </group>

    <item android:title="@string/information">
        <menu>
            <item
                android:id="@+id/nav_nct_location"
                android:icon="@drawable/ic_nav_about"
                android:title="@string/nct_centre_locations" />
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_nav_email"
                android:title="@string/contact_us" />
        </menu>
    </item>

</menu>
