<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@mipmap/ic_launcher"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/RegistrationET"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/plate_number"
        android:layout_width="250dp"
        android:inputType="text" />

    <Spinner
        android:id="@+id/manufacturers_spinner"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:entries="@array/manufacturers_array"/>

    <EditText
        android:id="@+id/ModelET"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/vehicle_model" />

    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:entries="@array/type_array"/>

    <EditText
        android:id="@+id/OwnerET"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/owner" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/custom_button_cancel"

            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textSize="18sp"

            android:layout_weight="50"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/buttonshape_add"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            />

        <Button
            android:id="@+id/custom_button_commit"

            android:text="@string/commit"
            android:textColor="#FFFFFF"
            android:textSize="18sp"

            android:layout_weight="50"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/buttonshape_add"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"/>

    </LinearLayout>

</LinearLayout>